# ark-groth16-zkv-example

./: Cargo.toml  README.md  zkverify-metadata.scale
src/: circuit.rs  convert.rs  main.rs
src/relayer/: convert.rs  mod.rs
src/zkv/: convert.rs  mod.rs
