[package]
name = "ark-groth16-zkv-example"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-std = "0.4.0"
hp-groth16 = { git = "https://github.com/zkVerify/zkVerify.git", tag = "0.9.1-0.14.0"}
pallet-groth16-verifier = { git = "https://github.com/zkVerify/zkVerify.git", tag = "0.9.1-0.14.0"}
parity-scale-codec = "3.0.0"
subxt = "0.42.1"
subxt-signer = "0.42.1"
tokio = {version = "1.0.0", features = ["rt-multi-thread"]}
