[package]
name = "ark-groth16-zkv-example"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
ark-std = "0.5.0"
clap = { version = "4", features = ["derive"] }
subxt = "0.42"
subxt-signer = "0.42"
tokio = {version = "1.0.0", features = ["rt-multi-thread"]}
